[package]
name = "sous"
version = "0.1.0"
authors = ["Bob Smith <endominus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "2.33.3"
dotenv = "0.15.0"
# druid = "0.7.0"
im = "15.0.0"
regex = "1.4.3"

[dependencies.rusqlite]
version = "*"
features = ["bundled"]

[dependencies.druid]
version = "0.7.0"
features = ["im"]